[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "tabulate>=0.10.0",
    "uvicorn>=0.42.0",
]
